feat: Add transfer commission feature

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,6 +16,12 @@ admin-command:
 # Валютный символ
 currency-symbol: "₽"
 
+# Настройки комиссии при переводе средств (/eco pay)
+commission:
+  # Процент комиссии. Например, 5.0 означает 5%.
+  # Установите 0.0, чтобы отключить комиссию.
+  percentage: 5.0
+
 # Настройки скорборда по умолчанию
 scoreboard:
   enabled-by-default: true
