--- a/src/main/resources/messages_ru.yml
+++ b/src/main/resources/messages_ru.yml
@@ -2,6 +2,7 @@ prefix: "&8[&6CoreEco&8] &r"
 player-not-found: "&cИгрок не найден или не в сети."
 player-does-not-exist: "&cИгрок с таким именем никогда не играл на сервере или не имеет счета."
 insufficient-funds: "&cУ вас недостаточно средств."
+insufficient-funds-for-commission: "&cНедостаточно средств для перевода с учетом комиссии ({commission}%)."
 cannot-pay-self: "&cВы не можете заплатить самому себе."
 invalid-amount: "&cУказана неверная сумма."
 no-permission: "&cУ вас нет прав для выполнения этой команды."
@@ -12,6 +13,7 @@ balance: "&7Ваш баланс: &e{balance}{symbol}"
 balance-other: "&7Баланс игрока &a{player}&7: &e{balance}{symbol}"
 
 payment-sent: "&7Вы отправили &e{amount}{symbol} &7игроку &a{recipient}&7."
+payment-sent-with-commission: "&7Вы отправили &e{amount}{symbol} &7игроку &a{recipient}&7. Комиссия составила &c{commission_amount}{symbol}&7."
 payment-received: "&7Вы получили &e{amount}{symbol} &7от игрока &a{sender}&7."
 
 balancetop-header: "&6--- Топ {size} богатейших игроков ---"
