Надежность: Деньги игроков теперь хранятся в быстрой и безопасной базе данных, а не в текстовом файле. Плагин автоматически делает миграцию прошлого файла балансов и создает резервные копии. Безопасность для админов: Опасные команды (установка/снятие денег) теперь требуют подтверждения, чтобы избежать случайных ошибок. Прозрачность экономики: Администраторы получили команду /eduadmin history для просмотра всех денежных операций любого игрока с удобной навигацией по страницам. Внешний вид: Все сообщения плагина были переработаны и добавлены недостающие.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.corearchitect</groupId>
     <artifactId>coreeconomy</artifactId>
-    <version>1.4.0</version>
+    <version>2.1.0</version>
     <packaging>jar</packaging>
 
     <name>CoreEconomy</name>
@@ -62,6 +62,12 @@
             <artifactId>paper-api</artifactId>
             <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.41.2.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
