--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,8 +18,6 @@ currency-symbol: "EDU"
 
 # Настройки комиссии при переводе средств (/eco pay)
 commission:
-  # Процент комиссии. Например, 5.0 означает 5%.
-  # Установите 0.0, чтобы отключить комиссию.
   percentage: 5.0
 
 # Настройки скорборда по умолчанию
@@ -28,12 +26,25 @@ scoreboard:
 
 # Настройки таблицы лидеров
 leaderboard:
-  # Как часто (в минутах) обновлять кеш топа игроков.
   update-interval-minutes: 1
-  # Количество игроков, которое будет кешироваться и отображаться в /baltop
   size: 10
 
 # Настройки хранения данных
 data-storage:
-  # Как часто (в минутах) автоматически сохранять данные всех онлайн-игроков.
-  autosave-interval-minutes: 1
+  type: "SQLITE"
+  autosave-interval-minutes: 5
+  sqlite:
+    filename: "database.db"
+
+# Настройки истории транзакций
+history:
+  # Количество записей на одной странице в команде /eco history
+  entries-per-page: 10
+
+# Настройки автоматического резервного копирования (только для SQLITE)
+backups:
+  enabled: true
+  # Интервал между резервными копиями в часах.
+  interval-hours: 24
+  # Максимальное количество файлов бэкапа, которые будут храниться. Старые будут удаляться.
+  max-files: 5
