--- a/src/main/resources/messages_ru.yml
+++ b/src/main/resources/messages_ru.yml
@@ -1,47 +1,85 @@
-prefix: "&8[&6CoreEco&8] &r"
+# ----------------------------------------------------------------
+#               CoreEconomy Messages (v2.2.0)
+# ----------------------------------------------------------------
+# {player} - Имя игрока
+# {recipient} - Имя получателя
+# {sender} - Имя отправителя
+# {amount} - Сумма
+# {symbol} - Символ валюты
+# {command} - Имя команды
+# {page} - Номер страницы
+# {max_pages} - Максимальное количество страниц
+# ----------------------------------------------------------------
+
+prefix: "&6&lCore&e&lEco &8» &r"
+
+# --- Общие сообщения об ошибках ---
+no-permission: "&cУ вас нет прав для выполнения этой команды."
 player-not-found: "&cИгрок не найден или не в сети."
 player-does-not-exist: "&cИгрок с таким именем никогда не играл на сервере или не имеет счета."
+invalid-amount: "&cУказана неверная сумма. Пожалуйста, введите положительное число."
+command:
+  player-only: "&cЭта команда может быть выполнена только игроком."
+  player-usage: "&cИспользование: &e/{command} <balance|pay|baltop|sbtoggle>"
+  admin-usage: "&cИспользование: &e/{command} <set|add|remove|freeze|unfreeze|reload|total|history|confirm>"
+  history-usage: "&cИспользование: &e/eduadmin history <игрок> [страница]"
+
+# --- Экономические операции ---
 insufficient-funds: "&cУ вас недостаточно средств."
-insufficient-funds-for-commission: "&cНедостаточно средств для перевода с учетом комиссии ({commission}%)."
-cannot-pay-self: "&cВы не можете заплатить самому себе."
-invalid-amount: "&cУказана неверная сумма."
-no-permission: "&cУ вас нет прав для выполнения этой команды."
+cannot-pay-self: "&cВы не можете перевести средства самому себе."
+transaction-cancelled: "&cТранзакция была отменена другим плагином."
 account-frozen: "&cВаш счет заморожен. Вы не можете выполнять эту операцию."
 account-frozen-other: "&cСчет игрока {player} заморожен."
 
-balance: "&7Ваш баланс: &e{balance }{symbol}"
+# --- Пользовательские команды ---
+balance: "&7Ваш баланс: &e{balance} {symbol}"
 balance-other: "&7Баланс игрока &a{player}&7: &e{balance} {symbol}"
 
-payment-sent: "&7Вы отправили &e{amount}{symbol} &7игроку &a{recipient}&7."
-payment-sent-with-commission: "&7Вы отправили &e{amount} {symbol} &7игроку &a{recipient}&7. Комиссия составила &c{commission_amount} {symbol}&7."
+payment-sent: "&7Вы успешно отправили &e{amount} {symbol} &7игроку &a{recipient}&7."
 payment-received: "&7Вы получили &e{amount} {symbol} &7от игрока &a{sender}&7."
 
 balancetop-header: "&6--- Топ {size} богатейших игроков ---"
 balancetop-entry: "&e{rank}. &a{player}&7: &e{balance} {symbol}"
 balancetop-footer: "&6--------------------------------"
-balancetop-empty: "&7Список лидеров пока пуст."
+balancetop-empty: "&cСписок лидеров пока пуст."
 
 scoreboard:
   title: "&6🔥 &e&lVibeRush &6🔥"
-  toggle-on: "&7Скорборд включен."
-  toggle-off: "&7Скорборборд выключен."
+  toggle-on: "&aСкорборд включен."
+  toggle-off: "&cСкорборд выключен."
   lines:
     - "&7&m------------------&r"
     - "&fИгрок: &e{player}"
     - " "
-    - "&fБаланс:"
-    - "&e{balance} {symbol}"
+    - "&fБаланс: &e{balance} {symbol}"
     - "&7&m------------------"
 
-command:
-  player-usage: "&cИспользование: /{command} <balance|pay|baltop|sbtoggle>"
-  admin-usage: "&cИспользование: /{command} <set|add|remove|freeze|unfreeze|reload|total> <игрок> [сумма]"
-
+# --- Административные команды ---
 admin:
-  reload-success: "&aКонфигурация и данные успешно перезагружены. Для изменения имен команд требуется перезапуск сервера."
-  balance-set: "&7Вы установили баланс игрока &a{player} &7на &e{amount}{symbol}&7."
-  balance-added: "&7Вы добавили &e{amount}{symbol} &7на баланс игрока &a{player}&7."
-  balance-removed: "&7Вы сняли &e{amount}{symbol} &7с баланса игрока &a{player}&7."
-  account-frozen-success: "&7Вы заморозили счет игрока &a{player}&7."
-  account-unfrozen-success: "&7Вы разморозили счет игрока &a{player}&7."
+  reload-success: "&aКонфигурация и данные успешно перезагружены."
+  balance-set: "&7Вы установили баланс игрока &a{player} &7на &e{amount} {symbol}&7."
+  balance-added: "&7Вы добавили &e{amount} {symbol} &7на баланс игрока &a{player}&7."
+  balance-removed: "&7Вы сняли &e{amount} {symbol} &7с баланса игрока &a{player}&7."
+  account-frozen-success: "&aВы заморозили счет игрока &e{player}&a."
+  account-unfrozen-success: "&aВы разморозили счет игрока &e{player}&a."
   total-balance: "&7Общий баланс на сервере: &e{total} {symbol}"
+  confirm-required: "&e&lВНИМАНИЕ! &eЭто опасная команда. Для подтверждения введите &6/{command} &eв течение 15 секунд."
+  no-pending-command: "&cУ вас нет команд, ожидающих подтверждения."
+  pending-command-expired: "&cВремя на подтверждение команды истекло."
+
+# --- История транзакций (только для админов) ---
+history:
+  no-entries: "&cДля данного игрока нет записей о транзакциях."
+  header: "&6--- История транзакций: {player} (Стр. {page}/{max_pages}) ---"
+  footer: "&6--- Навигация по страницам ---"
+  entry-format: "&8[&7{date}&8] &r{details}"
+  entry-pay-sent: "&c- &7Отправлено &e{amount} {symbol} &7игроку &a{recipient} &7(комиссия: &e{commission} {symbol}&7)"
+  entry-pay-received: "&a+ &7Получено &e{amount} {symbol} &7от игрока &a{sender}"
+  entry-admin-add: "&a+ &7Начислено админом &b{admin}&7: &e{amount} {symbol}"
+  entry-admin-remove: "&c- &7Снято админом &b{admin}&7: &e{amount} {symbol}"
+  entry-admin-set: "&6= &7Установлено админом &b{admin}&7: &e{amount} {symbol}"
+  pagination:
+    previous: "&c« Предыдущая"
+    next: "&aСледующая »"
+    no-previous: "&7« Предыдущая"
+    no-next: "&7Следующая »"
